log
Sun, May  4, 2025 11:28:01 PM: 
 treemap.c | 73 ++++++++++++++++++++++++++++++++++++---------------------------
 1 file changed, 42 insertions(+), 31 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'createTreeMap':
treemap.c:51:5: error: 'new' undeclared (first use in this function)
   51 |     new->lower_than = lower_than;
      |     ^~~
treemap.c:51:5: note: each undeclared identifier is reported only once for each function it appears in
test.c: At top level:
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
5729e4d
